--- a/Knowledge/r2+1d.md
+++ b/Knowledge/r2+1d.md
@@ -28,7 +28,7 @@ CVPR 18
 1. 3D 的卷积核 $(t,d,d)$
 2. 拆分为：
     1. 先是 $(1,d,d)$ 的卷积
-    2. 做一个空间的特征投射 M，把维度变换一下（目的是为了让参数和 3D 情况下维持一致）
+    2. 做一个空间的特征投射 M，把维度变换一下（目的是为了让参数和 3D 情况下维持一致
     3. 做一个 $(t,1,1)$ 的 1D 卷积
 3. 这种拆分的形式好的原因：
     1. 增强了网络的非线性，relu 层数更多
